src/bin/snapshots/antlr4_rust_gen__tests__structural_parser_predicate_patterns.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: lowered
---
[
    Some(
        TokenPairAdjacent,
    ),
    Some(
        ContextChildRuleTextNotEquals {
            rule_name: "local_type",
            text: "var",
        },
    ),
]
